--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "danfojs": "^1.1.1",
     "plotly.js": "^2.12.1",
     "react": "^18.1.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.1.0",
     "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.1",
