--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "danfojs": "^1.1.1",
+    "datejs": "^1.0.0-rc3",
     "plotly.js": "^2.12.1",
     "react": "^18.1.0",
     "react-date-range": "^1.4.0",
