feat: add scroll to top button

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-plotly.js": "^2.5.1",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
