--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reading-stats-app",
   "version": "0.1.0",
-  "homepage": "https://derlin.github.io/reading-stats",
+  "homepage": "https://readlog.derlin.ch",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
