--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "homepage": "https://readlog.derlin.ch",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "danfojs": "^1.1.1",
-    "plotly.js": "^2.12.1",
-    "react": "^18.1.0",
+    "danfojs": "^1.2.0",
+    "plotly.js": "^3.3.1",
+    "react": "^19.2.3",
+    "date-fns": "2.30.0",
     "react-date-range": "^1.4.0",
-    "react-dom": "^18.1.0",
-    "react-plotly.js": "^2.5.1",
-    "react-scripts": "5.0.1",
-    "sass": "^1.53.0",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "react-dom": "^19.2.3",
+    "react-plotly.js": "^2.6.0",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.97.0",
+    "styled-components": "^6.1.19",
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
