feat: migrate to vite

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ['main']
 
+env:
+  # Make vite use this as base for all links in the index.html
+  BASE_URL: https://readlog.derlin.ch
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,5 +29,5 @@ jobs:
         if: success()
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          folder: build
+          folder: dist
           branch: gh-pages
