--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,21 @@
-name: Deploy
+name: Build and Deploy
 
 on:
   push:
-    branches: ['main']
+    branches: ['*']
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: 'pages'
+  cancel-in-progress: false
 
 env:
   # Make vite use this as base for all links in the index.html
@@ -11,23 +24,35 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v6
-
-      - uses: actions/setup-node@v6
+      - uses: actions/setup-node@v4
         with:
           node-version: 24
           cache: 'npm'
 
-      - run: npm clean-install
+      - run: npm ci
+      - run: npm run fmt-check
+      - run: npm run build
 
-      - name: build
-        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+        if: ${{ github.ref == 'refs/heads/main' }}
 
-      - name: Deploy 🚀
-        if: success()
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload artifact
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: actions/upload-pages-artifact@v4
         with:
-          folder: dist
-          branch: gh-pages
+          path: ./dist
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    if: ${{ github.ref == 'refs/heads/main' }}
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
